clang/test/BSC/Negative/OwnedStruct/memoryleak/Access/owned-struct-instance-field.cbs
// RUN: %clang_cc1 -verify %s


owned struct A {
    public:
        int a;
};

int test1() {
    A a;
    a.a = 1;
    return (a.a - 1); // expected-error {{memory leak because temporary variable 'a' is owned or indirect owned type, please fix it}}
}
int test2() {
    A a;
    a.a = 1;
    return a.a ; // expected-error {{memory leak because temporary variable 'a' is owned or indirect owned type, please fix it}}
}

int test3() {
    A a;
    a.a = 1;
    return a.a - 1; // expected-error {{memory leak because temporary variable 'a' is owned or indirect owned type, please fix it}}
}
int main() {

    return 0;
}
